pyquil/_parser/gen3/QuilParser.py
# Generated from Quil.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class QuilParser ( Parser ):

    grammarFileName = "Quil.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'DEFGATE'", "'DEFCIRCUIT'", "'MEASURE'", 
                     "'LABEL'", "'HALT'", "'JUMP'", "'JUMP-WHEN'", "'JUMP-UNLESS'", 
                     "'RESET'", "'WAIT'", "'NOP'", "'INCLUDE'", "'PRAGMA'", 
                     "'DECLARE'", "'SHARING'", "'OFFSET'", "'AS'", "'MATRIX'", 
                     "'PERMUTATION'", "'NEG'", "'NOT'", "'TRUE'", "'FALSE'", 
                     "'AND'", "'IOR'", "'XOR'", "'OR'", "'ADD'", "'SUB'", 
                     "'MUL'", "'DIV'", "'MOVE'", "'EXCHANGE'", "'CONVERT'", 
                     "'EQ'", "'GT'", "'GE'", "'LT'", "'LE'", "'LOAD'", "'STORE'", 
                     "'pi'", "'i'", "'SIN'", "'COS'", "'SQRT'", "'EXP'", 
                     "'CIS'", "'+'", "'-'", "'*'", "'/'", "'^'", "'CAPTURE'", 
                     "'DEFCAL'", "'DEFFRAME'", "'DEFWAVEFORM'", "'DELAY'", 
                     "'FENCE'", "'INITIAL-FREQUENCY'", "'NONBLOCKING'", 
                     "'PULSE'", "'SAMPLE-RATE'", "'SET-FREQUENCY'", "'SET-PHASE'", 
                     "'SET-SCALE'", "'SHIFT-PHASE'", "'SWAP-PHASE'", "'RAW-CAPTURE'", 
                     "'CONTROLLED'", "'DAGGER'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'.'", "','", "'('", "')'", 
                     "'['", "']'", "':'", "'%'", "'@'", "'\"'", "'_'", "'    '", 
                     "<INVALID>", "<INVALID>", "' '" ]

    symbolicNames = [ "<INVALID>", "DEFGATE", "DEFCIRCUIT", "MEASURE", "LABEL", 
                      "HALT", "JUMP", "JUMPWHEN", "JUMPUNLESS", "RESET", 
                      "WAIT", "NOP", "INCLUDE", "PRAGMA", "DECLARE", "SHARING", 
                      "OFFSET", "AS", "MATRIX", "PERMUTATION", "NEG", "NOT", 
                      "TRUE", "FALSE", "AND", "IOR", "XOR", "OR", "ADD", 
                      "SUB", "MUL", "DIV", "MOVE", "EXCHANGE", "CONVERT", 
                      "EQ", "GT", "GE", "LT", "LE", "LOAD", "STORE", "PI", 
                      "I", "SIN", "COS", "SQRT", "EXP", "CIS", "PLUS", "MINUS", 
                      "TIMES", "DIVIDE", "POWER", "CAPTURE", "DEFCAL", "DEFFRAME", 
                      "DEFWAVEFORM", "DELAY", "FENCE", "INITIALFREQUENCY", 
                      "NONBLOCKING", "PULSE", "SAMPLERATE", "SETFREQUENCY", 
                      "SETPHASE", "SETSCALE", "SHIFTPHASE", "SWAPPHASE", 
                      "RAWCAPTURE", "CONTROLLED", "DAGGER", "IDENTIFIER", 
                      "INT", "FLOAT", "STRING", "PERIOD", "COMMA", "LPAREN", 
                      "RPAREN", "LBRACKET", "RBRACKET", "COLON", "PERCENTAGE", 
                      "AT", "QUOTE", "UNDERSCORE", "TAB", "NEWLINE", "COMMENT", 
                      "SPACE", "INVALID" ]

    RULE_quil = 0
    RULE_allInstr = 1
    RULE_instr = 2
    RULE_gate = 3
    RULE_name = 4
    RULE_qubit = 5
    RULE_param = 6
    RULE_modifier = 7
    RULE_defGate = 8
    RULE_variable = 9
    RULE_gatetype = 10
    RULE_matrix = 11
    RULE_matrixRow = 12
    RULE_defCircuit = 13
    RULE_qubitVariable = 14
    RULE_circuitQubit = 15
    RULE_circuitGate = 16
    RULE_circuitMeasure = 17
    RULE_circuitResetState = 18
    RULE_circuitInstr = 19
    RULE_circuit = 20
    RULE_measure = 21
    RULE_addr = 22
    RULE_defLabel = 23
    RULE_label = 24
    RULE_halt = 25
    RULE_jump = 26
    RULE_jumpWhen = 27
    RULE_jumpUnless = 28
    RULE_resetState = 29
    RULE_wait = 30
    RULE_memoryDescriptor = 31
    RULE_offsetDescriptor = 32
    RULE_classicalUnary = 33
    RULE_classicalBinary = 34
    RULE_logicalBinaryOp = 35
    RULE_arithmeticBinaryOp = 36
    RULE_move = 37
    RULE_exchange = 38
    RULE_convert = 39
    RULE_load = 40
    RULE_store = 41
    RULE_classicalComparison = 42
    RULE_nop = 43
    RULE_include = 44
    RULE_pragma = 45
    RULE_pragma_name = 46
    RULE_expression = 47
    RULE_function = 48
    RULE_sign = 49
    RULE_number = 50
    RULE_imaginaryN = 51
    RULE_realN = 52
    RULE_defFrame = 53
    RULE_frameSpec = 54
    RULE_frameAttr = 55
    RULE_defWaveform = 56
    RULE_defCalibration = 57
    RULE_defMeasCalibration = 58
    RULE_pulse = 59
    RULE_capture = 60
    RULE_rawCapture = 61
    RULE_setFrequency = 62
    RULE_setPhase = 63
    RULE_shiftPhase = 64
    RULE_swapPhase = 65
    RULE_setScale = 66
    RULE_delay = 67
    RULE_fence = 68
    RULE_formalQubit = 69
    RULE_namedParam = 70
    RULE_waveform = 71
    RULE_frame = 72

    ruleNames =  [ "quil", "allInstr", "instr", "gate", "name", "qubit", 
                   "param", "modifier", "defGate", "variable", "gatetype", 
                   "matrix", "matrixRow", "defCircuit", "qubitVariable", 
                   "circuitQubit", "circuitGate", "circuitMeasure", "circuitResetState", 
                   "circuitInstr", "circuit", "measure", "addr", "defLabel", 
                   "label", "halt", "jump", "jumpWhen", "jumpUnless", "resetState", 
                   "wait", "memoryDescriptor", "offsetDescriptor", "classicalUnary", 
                   "classicalBinary", "logicalBinaryOp", "arithmeticBinaryOp", 
                   "move", "exchange", "convert", "load", "store", "classicalComparison", 
                   "nop", "include", "pragma", "pragma_name", "expression", 
                   "function", "sign", "number", "imaginaryN", "realN", 
                   "defFrame", "frameSpec", "frameAttr", "defWaveform", 
                   "defCalibration", "defMeasCalibration", "pulse", "capture", 
                   "rawCapture", "setFrequency", "setPhase", "shiftPhase", 
                   "swapPhase", "setScale", "delay", "fence", "formalQubit", 
                   "namedParam", "waveform", "frame" ]

    EOF = Token.EOF
    DEFGATE=1
    DEFCIRCUIT=2
    MEASURE=3
    LABEL=4
    HALT=5
    JUMP=6
    JUMPWHEN=7
    JUMPUNLESS=8
    RESET=9
    WAIT=10
    NOP=11
    INCLUDE=12
    PRAGMA=13
    DECLARE=14
    SHARING=15
    OFFSET=16
    AS=17
    MATRIX=18
    PERMUTATION=19
    NEG=20
    NOT=21
    TRUE=22
    FALSE=23
    AND=24
    IOR=25
    XOR=26
    OR=27
    ADD=28
    SUB=29
    MUL=30
    DIV=31
    MOVE=32
    EXCHANGE=33
    CONVERT=34
    EQ=35
    GT=36
    GE=37
    LT=38
    LE=39
    LOAD=40
    STORE=41
    PI=42
    I=43
    SIN=44
    COS=45
    SQRT=46
    EXP=47
    CIS=48
    PLUS=49
    MINUS=50
    TIMES=51
    DIVIDE=52
    POWER=53
    CAPTURE=54
    DEFCAL=55
    DEFFRAME=56
    DEFWAVEFORM=57
    DELAY=58
    FENCE=59
    INITIALFREQUENCY=60
    NONBLOCKING=61
    PULSE=62
    SAMPLERATE=63
    SETFREQUENCY=64
    SETPHASE=65
    SETSCALE=66
    SHIFTPHASE=67
    SWAPPHASE=68
    RAWCAPTURE=69
    CONTROLLED=70
    DAGGER=71
    IDENTIFIER=72
    INT=73
    FLOAT=74
    STRING=75
    PERIOD=76
    COMMA=77
    LPAREN=78
    RPAREN=79
    LBRACKET=80
    RBRACKET=81
    COLON=82
    PERCENTAGE=83
    AT=84
    QUOTE=85
    UNDERSCORE=86
    TAB=87
    NEWLINE=88
    COMMENT=89
    SPACE=90
    INVALID=91

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class QuilContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(QuilParser.EOF, 0)

        def allInstr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(QuilParser.AllInstrContext)
            else:
                return self.getTypedRuleContext(QuilParser.AllInstrContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(QuilParser.NEWLINE)
            else:
                return self.getToken(QuilParser.NEWLINE, i)

        def getRuleIndex(self):
            return QuilParser.RULE_quil

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQuil" ):
                listener.enterQuil(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQuil" ):
                listener.exitQuil(self)




    def quil(self):

        localctx = QuilParser.QuilContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_quil)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << QuilParser.DEFGATE) | (1 << QuilParser.DEFCIRCUIT) | (1 << QuilParser.MEASURE) | (1 << QuilParser.LABEL) | (1 << QuilParser.HALT) | (1 << QuilParser.JUMP) | (1 << QuilParser.JUMPWHEN) | (1 << QuilParser.JUMPUNLESS) | (1 << QuilParser.RESET) | (1 << QuilParser.WAIT) | (1 << QuilParser.NOP) | (1 << QuilParser.INCLUDE) | (1 << QuilParser.PRAGMA) | (1 << QuilParser.DECLARE) | (1 << QuilParser.NEG) | (1 << QuilParser.NOT) | (1 << QuilParser.TRUE) | (1 << QuilParser.FALSE) | (1 << QuilParser.AND) | (1 << QuilParser.IOR) | (1 << QuilParser.XOR) | (1 << QuilParser.OR) | (1 << QuilParser.ADD) | (1 << QuilParser.SUB) | (1 << QuilParser.MUL) | (1 << QuilParser.DIV) | (1 << QuilParser.MOVE) | (1 << QuilParser.EXCHANGE) | (1 << QuilParser.CONVERT) | (1 << QuilParser.EQ) | (1 << QuilParser.GT) | (1 << QuilParser.GE) | (1 << QuilParser.LT) | (1 << QuilParser.LE) | (1 << QuilParser.LOAD) | (1 << QuilParser.STORE) | (1 << QuilParser.CAPTURE) | (1 << QuilParser.DEFCAL) | (1 << QuilParser.DEFFRAME) | (1 << QuilParser.DEFWAVEFORM) | (1 << QuilParser.DELAY) | (1 << QuilParser.FENCE) | (1 << QuilParser.NONBLOCKING) | (1 << QuilParser.PULSE))) != 0) or ((((_la - 64)) & ~0x3f) == 0 and ((1 << (_la - 64)) & ((1 << (QuilParser.SETFREQUENCY - 64)) | (1 << (QuilParser.SETPHASE - 64)) | (1 << (QuilParser.SETSCALE - 64)) | (1 << (QuilParser.SHIFTPHASE - 64)) | (1 << (QuilParser.SWAPPHASE - 64)) | (1 << (QuilParser.RAWCAPTURE - 64)) | (1 << (QuilParser.CONTROLLED - 64)) | (1 << (QuilParser.DAGGER - 64)) | (1 << (QuilParser.IDENTIFIER - 64)))) != 0):
                self.state = 146
                self.allInstr()


            self.state = 157
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 150 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 149
                        self.match(QuilParser.NEWLINE)
                        self.state = 152 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not (_la==QuilParser.NEWLINE):
                            break

                    self.state = 154
                    self.allInstr() 
                self.state = 159
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

            self.state = 163
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==QuilParser.NEWLINE:
                self.state = 160
                self.match(QuilParser.NEWLINE)
                self.state = 165
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 166
            self.match(QuilParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AllInstrContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def defGate(self):
            return self.getTypedRuleContext(QuilParser.DefGateContext,0)


        def defCircuit(self):
            return self.getTypedRuleContext(QuilParser.DefCircuitContext,0)


        def defFrame(self):
            return self.getTypedRuleContext(QuilParser.DefFrameContext,0)


        def defWaveform(self):
            return self.getTypedRuleContext(QuilParser.DefWaveformContext,0)


        def defCalibration(self):
            return self.getTypedRuleContext(QuilParser.DefCalibrationContext,0)


        def defMeasCalibration(self):
            return self.getTypedRuleContext(QuilParser.DefMeasCalibrationContext,0)


        def instr(self):
            return self.getTypedRuleContext(QuilParser.InstrContext,0)


        def getRuleIndex(self):
            return QuilParser.RULE_allInstr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAllInstr" ):
                listener.enterAllInstr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAllInstr" ):
                listener.exitAllInstr(self)




    def allInstr(self):

        localctx = QuilParser.AllInstrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_allInstr)
        try:
            self.state = 175
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 168
                self.defGate()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 169
                self.defCircuit()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 170
                self.defFrame()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 171
                self.defWaveform()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 172
                self.defCalibration()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 173
                self.defMeasCalibration()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 174
                self.instr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstrContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fence(self):
            return self.getTypedRuleContext(QuilParser.FenceContext,0)


        def delay(self):
            return self.getTypedRuleContext(QuilParser.DelayContext,0)


        def gate(self):
            return self.getTypedRuleContext(QuilParser.GateContext,0)


        def measure(self):
            return self.getTypedRuleContext(QuilParser.MeasureContext,0)


        def defLabel(self):
            return self.getTypedRuleContext(QuilParser.DefLabelContext,0)


        def halt(self):
            return self.getTypedRuleContext(QuilParser.HaltContext,0)


        def jump(self):
            return self.getTypedRuleContext(QuilParser.JumpContext,0)


        def jumpWhen(self):
            return self.getTypedRuleContext(QuilParser.JumpWhenContext,0)


        def jumpUnless(self):
            return self.getTypedRuleContext(QuilParser.JumpUnlessContext,0)


        def resetState(self):
            return self.getTypedRuleContext(QuilParser.ResetStateContext,0)


        def wait(self):
            return self.getTypedRuleContext(QuilParser.WaitContext,0)


        def classicalUnary(self):
            return self.getTypedRuleContext(QuilParser.ClassicalUnaryContext,0)


        def classicalBinary(self):
            return self.getTypedRuleContext(QuilParser.ClassicalBinaryContext,0)


        def classicalComparison(self):
            return self.getTypedRuleContext(QuilParser.ClassicalComparisonContext,0)


        def load(self):
            return self.getTypedRuleContext(QuilParser.LoadContext,0)


        def store(self):
            return self.getTypedRuleContext(QuilParser.StoreContext,0)


        def nop(self):
            return self.getTypedRuleContext(QuilParser.NopContext,0)


        def include(self):
            return self.getTypedRuleContext(QuilParser.IncludeContext,0)


        def pragma(self):
            return self.getTypedRuleContext(QuilParser.PragmaContext,0)


        def pulse(self):
            return self.getTypedRuleContext(QuilParser.PulseContext,0)


        def setFrequency(self):
            return self.getTypedRuleContext(QuilParser.SetFrequencyContext,0)


        def setPhase(self):
            return self.getTypedRuleContext(QuilParser.SetPhaseContext,0)


        def shiftPhase(self):
            return self.getTypedRuleContext(QuilParser.ShiftPhaseContext,0)


        def swapPhase(self):
            return self.getTypedRuleContext(QuilParser.SwapPhaseContext,0)


        def setScale(self):
            return self.getTypedRuleContext(QuilParser.SetScaleContext,0)


        def capture(self):
            return self.getTypedRuleContext(QuilParser.CaptureContext,0)


        def rawCapture(self):
            return self.getTypedRuleContext(QuilParser.RawCaptureContext,0)


        def memoryDescriptor(self):
            return self.getTypedRuleContext(QuilParser.MemoryDescriptorContext,0)


        def getRuleIndex(self):
            return QuilParser.RULE_instr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstr" ):
                listener.enterInstr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstr" ):
                listener.exitInstr(self)




    def instr(self):

        localctx = QuilParser.InstrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_instr)
        try:
            self.state = 205
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 177
                self.fence()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 178
                self.delay()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 179
                self.gate()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 180
                self.measure()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 181
                self.defLabel()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 182
                self.halt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 183
                self.jump()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 184
                self.jumpWhen()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 185
                self.jumpUnless()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 186
                self.resetState()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 187
                self.wait()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 188
                self.classicalUnary()
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 189
                self.classicalBinary()
                pass

            elif la_ == 14:
                self.enterOuterAlt(localctx, 14)
                self.state = 190
                self.classicalComparison()
                pass

            elif la_ == 15:
                self.enterOuterAlt(localctx, 15)
                self.state = 191
                self.load()
                pass

            elif la_ == 16:
                self.enterOuterAlt(localctx, 16)
                self.state = 192
                self.store()
                pass

            elif la_ == 17:
                self.enterOuterAlt(localctx, 17)
                self.state = 193
                self.nop()
                pass

            elif la_ == 18:
                self.enterOuterAlt(localctx, 18)
                self.state = 194
                self.include()
                pass

            elif la_ == 19:
                self.enterOuterAlt(localctx, 19)
                self.state = 195
                self.pragma()
                pass

            elif la_ == 20:
                self.enterOuterAlt(localctx, 20)
                self.state = 196
                self.pulse()
                pass

            elif la_ == 21:
                self.enterOuterAlt(localctx, 21)
                self.state = 197
                self.setFrequency()
                pass

            elif la_ == 22:
                self.enterOuterAlt(localctx, 22)
                self.state = 198
                self.setPhase()
                pass

            elif la_ == 23:
                self.enterOuterAlt(localctx, 23)
                self.state = 199
                self.shiftPhase()
                pass

            elif la_ == 24:
                self.enterOuterAlt(localctx, 24)
                self.state = 200
                self.swapPhase()
                pass

            elif la_ == 25:
                self.enterOuterAlt(localctx, 25)
                self.state = 201
                self.setScale()
                pass

            elif la_ == 26:
                self.enterOuterAlt(localctx, 26)
                self.state = 202
                self.capture()
                pass

            elif la_ == 27:
                self.enterOuterAlt(localctx, 27)
                self.state = 203
                self.rawCapture()
                pass

            elif la_ == 28:
                self.enterOuterAlt(localctx, 28)
                self.state = 204
                self.memoryDescriptor()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GateContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
